ch-11-Ingress/deploy-sample-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-1
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: pathbase2
        image: devopsprosamples/next-path-sample-1
