ch-11-Ingress/deploy-sample-2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-2
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: pathbase2
        image: devopsprosamples/next-path-sample-2
