ch-11-Ingress/deploy-sample-3.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-3
  labels:
    app: app3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: Hostbase1
        image: devopsprosamples/next-sample-1
