ch-11-Ingress/deploy-sample-4.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-4
  labels:
    app: app4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: Hostbase2
        image: devopsprosamples/next-sample-4
