ch-11-Ingress/Host-base-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-whoami
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: wwww.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test1
            port:
              number: 80
  - host: fun.testingress.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test2
            port:
              number: 80
